# Blog

./: .db-env-example  .flake8  .gitignore  .post_manager-env-example  README.md  docker-compose-local-dev-database.yml  docker-compose.yml
newsline/: Dockerfile  Main.py  README.md  config.py  pyproject.toml
newsline/forms/authors/: registration.py
newsline/forms/posts/: create.py
newsline/forms/topics/: create.py
newsline/pages/: Authors.py  Posts.py  Topics.py
newsline/schemas/: authors.py  comments.py  posts.py  topics.py
newsline/urls/: authors.py  comments.py  posts.py  topics.py
newsline/views/: posts.py
post_manager/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
post_manager/alembic/: env.py
post_manager/alembic/versions/: 2024_01_03_1403-f9395e6537e3_create_author_comment_post_tables.py  2024_01_03_1533-af2996b62cc4_create_topics_table.py  2024_01_03_1541-8fefce677a6c_create_like_table.py  2024_01_03_1713-827f86d829de_add_creation_date_edit_date_for_author_.py  2024_01_03_1730-afab886f9a9f_correction_of_a_typo_in_the_column_.py  2024_01_09_1802-515f1a65cabd_add_cascading_deletion.py  2024_01_09_1904-e9b326baa673_add_unique_constraint_for_topics_and_.py  2024_01_09_2046-926e7b3c2968_creating_indexes_for_author_id_post_id_.py
post_manager/migration/: env.py
post_manager/migration/versions/: 5e408238eecb_initial.py
post_manager/post_manager/: main.py
post_manager/post_manager/api_v1/: __init__.py  exceptions.py  exeptions.py  utils.py
post_manager/post_manager/app/: main.py
post_manager/tests/: test_useless.py
(+50 files in other folders)
