[tool.poetry]
name = "post-manager"
version = "0.1.0"
description = ""
authors = ["Eytes <yura.shamanov2000@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
fastapi = {extras = ["all"], version = "^0.108.0"}
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
